<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout"
    android:orientation="vertical" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:padding="10dip" >
    <TextView
	    android:id="@+id/type_of_sleep"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_horizontal"
	    android:textSize="25sp"
	    android:textStyle="bold"
	    android:textColor="@color/off_white" />
    <TextView
	    android:id="@+id/total_sleep"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_horizontal"
	    android:textSize="25sp"
	    android:textStyle="bold"
	    android:textColor="@color/off_white" />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:orientation="horizontal" 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/sleep"
	        android:textSize="15sp"
	        android:textStyle="bold"
	        android:textColor="@color/off_white" />
	    <TextView
	        android:id="@+id/asleep_time"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:paddingLeft="10dip"
	        android:textSize="15sp"
	        android:textColor="@color/off_white" />
	    <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="0"
	        android:text="@string/edit"
	        android:textColor="@color/off_white"
	        android:onClick="onClickEditSleep" />
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:orientation="horizontal" 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/wake"
	        android:textSize="15sp"
	        android:textStyle="bold"
	        android:textColor="@color/off_white" />
	    <TextView
	        android:id="@+id/awake_time"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:paddingLeft="10dip"
	        android:textSize="15sp"
	        android:textColor="@color/off_white" />
	    <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="0"
	        android:text="@string/edit"
	        android:textColor="@color/off_white"
	        android:onClick="onClickEditWake" />
    </LinearLayout>
    <RatingBar
	    android:id="@+id/rating_bar"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal"
	    android:numStars="5"
	    android:stepSize="1" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/excuse_header"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/off_white" />
    <ListView
        android:id="@+id/excuses_list"
        android:layout_width="match_parent"
   	 	android:layout_height="fill_parent"
   	 	android:layout_weight="1"
   	 	android:divider="@color/off_white"
    	android:dividerHeight="1sp"
    	android:fadeScrollbars="false" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment_title"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/off_white" />
    <EditText
        android:id="@+id/comment_box"
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal"
	    android:textSize="15sp"
        android:textStyle="bold"
	    android:textColor="@color/off_white"
	    android:maxLength="255"
	    android:hint="@string/comment_hint" />
    <Button 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/off_white"
        android:onClick="onClickSave" />
</LinearLayout>